--- a/custom_barrio_theme.libraries.yml
+++ b/custom_barrio_theme.libraries.yml
@@ -6,35 +6,9 @@ global-styling:
   css:
     component:
       css/style.css: {}
+      css/colors.css: {}
       css/commons.css: {}
       css/mobile.css: {}
       css/tablet.css: {}
       css/desktop.css: {}
-      css/commerce.css: {}
-      #css/colors.css: {}
-bootstrap:
-  js:
-    /libraries/popper.js/dist/umd/popper.min.js: { weight: -19 }
-    /libraries/bootstrap/dist/js/bootstrap.min.js: { weight: -20 }
-  css:
-    component:
-      /libraries/bootstrap/dist/css/bootstrap.min.css: {}
-  dependencies:
-    - core/popperjs
-bootstrap_cdn:
-  js:
-    //cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js: {}
-  css:
-    component:
-      //cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css: {}
-  dependencies:
-    - core/popperjs
-color.preview:
-  version: VERSION
-  css:
-    theme:
-      color/preview.css: {}
-  js:
-    color/preview.js: {}
-  dependencies:
-    - color/drupal.color
+
